@@ -84,7 +84,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     ApplicationManager.getApplication().getMessageBus().connect().subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener(){
       @Override
       public void pluginUnloaded(@NotNull IdeaPluginDescriptor pluginDescriptor, boolean isUpdate) {
-        // myIdToDirCache could retain alien file systems
+        // `myIdToDirCache` could retain alien file systems
         clearIdCache();
         // remove alien file system references from myRoots
         for (Iterator<Map.Entry<String, VirtualFileSystemEntry>> iterator = myRoots.entrySet().iterator(); iterator.hasNext(); ) {
@@ -102,10 +102,10 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     activity.end();
   }
 
-  private @NotNull BulkFileListener getPublisher() {
+  private BulkFileListener getPublisher() {
     BulkFileListener publisher = myPublisher;
     if (publisher == null) {
-      // cannot be in constructor, to ensure that lazy listeners will be not created too early
+      // cannot be in constructor, to ensure that lazy listeners won't be created too early
       publisher = ApplicationManager.getApplication().getMessageBus().syncPublisher(VirtualFileManager.VFS_CHANGES);
       myPublisher = publisher;
     }
@@ -143,7 +143,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return myIdToDirCache.getCachedDir(id);
   }
 
-  private static @NotNull NewVirtualFileSystem getDelegate(@NotNull VirtualFile file) {
+  private static NewVirtualFileSystem getDelegate(VirtualFile file) {
     return (NewVirtualFileSystem)file.getFileSystem();
   }
 
@@ -169,7 +169,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   // return actual children
-  private static @NotNull List<? extends ChildInfo> persistAllChildren(@NotNull VirtualFile file, int id) {
+  private static List<ChildInfo> persistAllChildren(VirtualFile file, int id) {
     NewVirtualFileSystem fs = replaceWithNativeFS(getDelegate(file));
     Map<String, ChildInfo> justCreated = new HashMap<>();
     String[] delegateNames = VfsUtil.filterNames(fs.list(file));
@@ -248,19 +248,19 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return FSRecords.writeAttribute(getFileId(file), att);
   }
 
-  private static @Nullable DataInputStream readContent(@NotNull VirtualFile file) {
+  private static @Nullable DataInputStream readContent(VirtualFile file) {
     return FSRecords.readContent(getFileId(file));
   }
 
-  private static @NotNull DataInputStream readContentById(int contentId) {
+  private static DataInputStream readContentById(int contentId) {
     return FSRecords.readContentById(contentId);
   }
 
-  private static @NotNull DataOutputStream writeContent(@NotNull VirtualFile file, boolean readOnly) {
+  private static DataOutputStream writeContent(VirtualFile file, boolean readOnly) {
     return FSRecords.writeContent(getFileId(file), readOnly);
   }
 
-  private static void writeContent(@NotNull VirtualFile file, @NotNull ByteArraySequence content, boolean readOnly) {
+  private static void writeContent(VirtualFile file, ByteArraySequence content, boolean readOnly) {
     FSRecords.writeContent(getFileId(file), content, readOnly);
   }
 
@@ -293,13 +293,13 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return FSRecords.getPersistentModCount();
   }
 
-  // return nameId>0 if write successful, -1 if not
+  // returns `nameId` > 0 if write successful, -1 if not
   private static int writeAttributesToRecord(int id,
                                              @Nullable VirtualFile parentFile,
                                              int parentId,
-                                             @NotNull CharSequence name,
-                                             @NotNull NewVirtualFileSystem fs,
-                                             @NotNull FileAttributes attributes) {
+                                             CharSequence name,
+                                             NewVirtualFileSystem fs,
+                                             FileAttributes attributes) {
     assert id > 0 : id;
     assert parentId >= 0 : parentId; // 0 means there's no parent
     if (name.length() != 0) {
@@ -323,10 +323,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return isDirectory(getFileAttributes(getFileId(file)));
   }
 
-  private static boolean namesEqual(@NotNull VirtualFileSystem fs,
-                                    @Nullable VirtualFile parentFile,
-                                    @NotNull CharSequence n1,
-                                    @NotNull CharSequence n2) {
+  private static boolean namesEqual(VirtualFileSystem fs, @Nullable VirtualFile parentFile, CharSequence n1, CharSequence n2) {
     return Comparing.equal(n1, n2, parentFile == null ? fs.isCaseSensitive() : parentFile.isCaseSensitive());
   }
 
@@ -347,7 +344,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     getDelegate(file).setTimeStamp(file, modStamp);
   }
 
-  private static int getFileId(@NotNull VirtualFile file) {
+  private static int getFileId(VirtualFile file) {
     return ((VirtualFileWithId)file).getId();
   }
 
@@ -428,21 +425,18 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return result.get();
   }
 
-  private static ChildInfo findExistingChildInfo(@NotNull VirtualFile parent,
-                                                 @NotNull String childName,
-                                                 @NotNull List<? extends ChildInfo> children,
-                                                 @NotNull NewVirtualFileSystem fs) {
+  private static ChildInfo findExistingChildInfo(VirtualFile parent, String childName, List<ChildInfo> children, NewVirtualFileSystem fs) {
     if (children.isEmpty()) {
       return null;
     }
-    // fast path, check that some child has same nameId as given name to avoid overhead on retrieving names for non-cached children
+    // fast path, check that some child has the same `nameId` as a given name - to avoid an overhead on retrieving names of non-cached children
     int nameId = FSRecords.getNameId(childName);
     for (ChildInfo info : children) {
       if (nameId == info.getNameId()) {
         return info;
       }
     }
-    // for case sensitive system the above check is exhaustive in consistent state of vfs
+    // for case-sensitive systems, the above check is exhaustive in consistent state of VFS
     if (!parent.isCaseSensitive()) {
       for (ChildInfo info : children) {
         if (namesEqual(fs, parent, childName, FSRecords.getNameByNameId(info.getNameId()))) {
@@ -515,7 +509,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return child;
   }
 
-  private static boolean isUtf8BomRequired(@NotNull VirtualFile file) {
+  private static boolean isUtf8BomRequired(VirtualFile file) {
     for (Utf8BomOptionProvider encodingProvider : Utf8BomOptionProvider.EP_NAME.getIterable()) {
       if (encodingProvider.shouldAddBOMForNewUtf8File(file)) {
         return true;
@@ -552,8 +546,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
   @Override
   public byte @NotNull [] contentsToByteArray(@NotNull VirtualFile file, boolean cacheContent) throws IOException {
-    InputStream contentStream = null;
-    boolean reloadFromDelegate;
+    InputStream contentStream;
     boolean outdated;
     int fileId;
     long length;
@@ -563,19 +556,19 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       fileId = getFileId(file);
       length = getLengthIfUpToDate(file);
       outdated = length == -1 || mustReloadContent(file);
-      reloadFromDelegate = outdated || (contentStream = readContent(file)) == null;
+      contentStream = outdated ? null : readContent(file);
     }
     finally {
       myInputLock.readLock().unlock();
     }
 
-    if (reloadFromDelegate) {
+    if (contentStream == null) {
       NewVirtualFileSystem delegate = getDelegate(file);
 
       byte[] content;
       if (outdated) {
-        // in this case, file can have out-of-date length. so, update it first (it's needed for correct contentsToByteArray() work)
-        // see IDEA-90813 for possible bugs
+        // In this case, the file can have an out-of-date length. So, update it first (needed for the correct work of `contentsToByteArray`)
+        // See IDEA-90813 for possible bugs.
         setLength(fileId, delegate.getLength(file));
         content = delegate.contentsToByteArray(file);
       }
@@ -586,14 +579,9 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       }
 
       Application application = ApplicationManager.getApplication();
-      // we should cache every local files content
-      // because the local history feature is currently depends on this cache,
-      // perforce offline mode as well
-      if ((!delegate.isReadOnly() ||
-           // do not cache archive content unless asked
-           cacheContent && !application.isInternal() && !application.isUnitTestMode()) &&
-          shouldCache(content.length)) {
-
+      // we should cache every local file's content, because the local history feature and Perforce offline mode depend on the cache
+      // (do not cache archive content unless explicitly asked)
+      if ((!delegate.isReadOnly() || cacheContent && !application.isInternal() && !application.isUnitTestMode()) && shouldCache(content.length)) {
         myInputLock.writeLock().lock();
         try {
           writeContent(file, ByteArraySequence.create(content), delegate.isReadOnly());
@@ -606,18 +594,20 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
       return content;
     }
+
     try {
       assert length >= 0 : file;
       return contentStream.readNBytes((int)length);
     }
     catch (IOException e) {
       FSRecords.handleError(e);
+      return ArrayUtil.EMPTY_BYTE_ARRAY;
     }
-    return ArrayUtil.EMPTY_BYTE_ARRAY;
   }
 
   @Override
   public byte @NotNull [] contentsToByteArray(int contentId) throws IOException {
+    //noinspection resource
     return readContentById(contentId).readAllBytes();
   }
 
@@ -659,11 +649,11 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return len <= PersistentFSConstants.FILE_LENGTH_TO_CACHE_THRESHOLD && !HeavyProcessLatch.INSTANCE.isRunning();
   }
 
-  private static boolean mustReloadContent(@NotNull VirtualFile file) {
+  private static boolean mustReloadContent(VirtualFile file) {
     return BitUtil.isSet(FSRecords.getFlags(getFileId(file)), Flags.MUST_RELOAD_CONTENT);
   }
 
-  private static long reloadLengthFromDelegate(@NotNull VirtualFile file, @NotNull FileSystemInterface delegate) {
+  private static long reloadLengthFromDelegate(VirtualFile file, FileSystemInterface delegate) {
     long len = delegate.getLength(file);
     int fileId = getFileId(file);
     setLength(fileId, len);
@@ -675,10 +665,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     setFlag(fileId, Flags.MUST_RELOAD_LENGTH, false);
   }
 
-  private @NotNull InputStream createReplicatorAndStoreContent(@NotNull VirtualFile file,
-                                                               @NotNull InputStream nativeStream,
-                                                               long fileLength,
-                                                               boolean readOnly) {
+  private InputStream createReplicatorAndStoreContent(VirtualFile file, InputStream nativeStream, long fileLength, boolean readOnly) {
     if (nativeStream instanceof BufferExposingByteArrayInputStream) {
       // optimization
       BufferExposingByteArrayInputStream  byteStream = (BufferExposingByteArrayInputStream )nativeStream;
@@ -714,13 +701,11 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     };
   }
 
-  private void storeContentToStorage(long fileLength,
-                                     @NotNull VirtualFile file,
-                                     boolean readOnly, byte @NotNull [] bytes, int bytesLength) {
+  private void storeContentToStorage(long fileLength, VirtualFile file, boolean readOnly, byte[] bytes, int byteLength) {
     myInputLock.writeLock().lock();
     try {
-      if (bytesLength == fileLength) {
-        writeContent(file, new ByteArraySequence(bytes, 0, bytesLength), readOnly);
+      if (byteLength == fileLength) {
+        writeContent(file, new ByteArraySequence(bytes, 0, byteLength), readOnly);
         setFlag(file, Flags.MUST_RELOAD_CONTENT, false);
         setFlag(file, Flags.MUST_RELOAD_LENGTH, false);
       }
@@ -738,19 +723,16 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return FSRecords.getContentHash(getFileId(file));
   }
 
-  // returns last recorded length or -1 if must reload from delegate
-  private static long getLengthIfUpToDate(@NotNull VirtualFile file) {
+  // returns last recorded length, or -1 when must reload from delegate
+  private static long getLengthIfUpToDate(VirtualFile file) {
     int fileId = getFileId(file);
     return BitUtil.isSet(FSRecords.getFlags(fileId), Flags.MUST_RELOAD_LENGTH) ? -1 : FSRecords.getLength(fileId);
   }
 
   @Override
-  public @NotNull OutputStream getOutputStream(@NotNull VirtualFile file,
-                                               Object requestor,
-                                               long modStamp,
-                                               long timeStamp) {
+  public @NotNull OutputStream getOutputStream(@NotNull VirtualFile file, Object requestor, long modStamp, long timeStamp) {
     return new ByteArrayOutputStream() {
-      private boolean closed; // protection against user calling .close() twice
+      private boolean closed;
 
       @Override
       public void close() throws IOException {
@@ -760,12 +742,13 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         ApplicationManager.getApplication().assertWriteAccessAllowed();
 
         long oldLength = getLastRecordedLength(file);
-        VFileContentChangeEvent event = new VFileContentChangeEvent(requestor, file, file.getModificationStamp(), modStamp, file.getTimeStamp(), -1, oldLength, count, false);
-        List<VFileContentChangeEvent> events = Collections.singletonList(event);
+        VFileContentChangeEvent event = new VFileContentChangeEvent(
+          requestor, file, file.getModificationStamp(), modStamp, file.getTimeStamp(), -1, oldLength, count, false);
+        List<VFileEvent> events = List.of(event);
         fireBeforeEvents(getPublisher(), events);
 
         NewVirtualFileSystem delegate = getDelegate(file);
-        // FSRecords.ContentOutputStream already buffered, no need to wrap in BufferedStream
+        // `FSRecords.ContentOutputStream` already buffered, no need to wrap in `BufferedStream`
         try (OutputStream persistenceStream = writeContent(file, delegate.isReadOnly())) {
           persistenceStream.write(buf, 0, count);
         }
@@ -809,11 +792,10 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     processEvent(new VFileMoveEvent(requestor, file, newParent));
   }
 
-  private void processEvent(@NotNull VFileEvent event) {
+  private void processEvent(VFileEvent event) {
     ApplicationManager.getApplication().assertWriteAccessAllowed();
-    if (!event.isValid()) {
-      return;
-    }
+    if (!event.isValid()) return;
+
     List<VFileEvent> outValidatedEvents = new ArrayList<>();
     outValidatedEvents.add(event);
     List<Runnable> outApplyActions = new ArrayList<>();
@@ -822,9 +804,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     if (jarDeleteEvents.isEmpty() && outApplyActions.isEmpty()) {
       // optimisation: skip all groupings
       fireBeforeEvents(publisher, outValidatedEvents);
-
       applyEvent(event);
-
       fireAfterEvents(publisher, outValidatedEvents);
     }
     else {
@@ -834,25 +814,24 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         outApplyActions.add(() -> applyEvent(jarDeleteEvent));
         outValidatedEvents.add(jarDeleteEvent);
       }
-
       applyMultipleEvents(publisher, outApplyActions, outValidatedEvents, false);
     }
   }
 
-  // Tries to find a group of non-conflicting events in range [startIndex..inEvents.size()).
+  // Tries to find a group of non-conflicting events in range [`startIndex`..`inEvents.size()`).
   // Two events are conflicting if the originating file of one event is an ancestor (non-strict) of the file from the other.
-  // E.g. "change(a/b/c/x.txt)" and "delete(a/b/c)" are conflicting because "a/b/c/x.txt" is under the "a/b/c" directory from the other event.
+  // E.g., "change(a/b/c/x.txt)" and "delete(a/b/c)" are conflicting because "a/b/c/x.txt" is under the "a/b/c" directory from the other event.
   //
   // returns index after the last grouped event.
-  private static int groupByPath(List<? extends CompoundVFileEvent> events,
+  private static int groupByPath(List<CompoundVFileEvent> events,
                                  int startIndex,
-                                 @NotNull MostlySingularMultiMap<String, VFileEvent> filesInvolved,
-                                 @NotNull Set<? super String> middleDirsInvolved,
-                                 @NotNull Set<? super VirtualFile> deleted,
-                                 @NotNull Map<VirtualDirectoryImpl, Object> toCreate,// dir -> VFileCreateEvent or Collection<VFileCreateEvent> in this dir
-                                 @NotNull Set<? super VFileEvent> eventsToRemove) {
+                                 MostlySingularMultiMap<String, VFileEvent> filesInvolved,
+                                 Set<String> middleDirsInvolved,
+                                 Set<VirtualFile> deleted,
+                                 Map<VirtualDirectoryImpl, Object> toCreate,  // dir -> VFileCreateEvent|Collection<VFileCreateEvent> in this dir
+                                 Set<VFileEvent> eventsToRemove) {
     // store all paths from all events (including all parents)
-    // check the each new event's path against this set and if it's there, this event is conflicting
+    // check each new event's path against this set and if it's there, this event is conflicting
     int i;
     for (i = startIndex; i < events.size(); i++) {
       VFileEvent event = events.get(i).getFileEvent();
@@ -871,14 +850,13 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         else {
           if (createEvents instanceof VFileCreateEvent) {
             VFileCreateEvent prevEvent = (VFileCreateEvent)createEvents;
-            Set<VFileCreateEvent> children = parent.isCaseSensitive() ? new LinkedHashSet<>() :
-                                             CollectionFactory.createLinkedCustomHashingStrategySet(CASE_INSENSITIVE_STRATEGY);
+            Set<VFileCreateEvent> children =
+              parent.isCaseSensitive() ? new LinkedHashSet<>() : CollectionFactory.createLinkedCustomHashingStrategySet(CASE_INSENSITIVE_STRATEGY);
             children.add(prevEvent);
             toCreate.put(parent, children);
             createEvents = children;
           }
-          //noinspection unchecked
-          Collection<VFileCreateEvent> children = (Collection<VFileCreateEvent>)createEvents;
+          @SuppressWarnings("unchecked") Collection<VFileCreateEvent> children = (Collection<VFileCreateEvent>)createEvents;
           if (!children.add(createEvent)) {
             eventsToRemove.add(createEvent);
             continue;
@@ -889,8 +867,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       if (eventConflictsWithPrevious(event, path, filesInvolved, middleDirsInvolved)) {
         break;
       }
-      // some synthetic events really are composite events, e.g. VFileMoveEvent = VFileDeleteEvent+VFileCreateEvent,
-      // so both paths should be checked for conflicts
+      // Some events are composite (e.g. `VFileMoveEvent` = `VFileDeleteEvent` + `VFileCreateEvent`),
+      // so both paths should be checked for conflicts.
       String path2 = getAlternativePath(event);
       if (path2 != null &&
           !(SystemInfoRt.isFileSystemCaseSensitive ? path2.equals(path) : path2.equalsIgnoreCase(path)) &&
@@ -902,7 +880,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return i;
   }
 
-  private static String getAlternativePath(@NotNull VFileEvent event) {
+  private static String getAlternativePath(VFileEvent event) {
     if (event instanceof VFilePropertyChangeEvent && ((VFilePropertyChangeEvent)event).getPropertyName().equals(VirtualFile.PROP_NAME)) {
       VFilePropertyChangeEvent pce = (VFilePropertyChangeEvent)event;
       VirtualFile parent = pce.getFile().getParent();
@@ -921,7 +899,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   // return true if the file or the ancestor of the file is going to be deleted
-  private static boolean removeNestedDelete(@NotNull VirtualFile file, @NotNull Set<? super VirtualFile> deleted) {
+  private static boolean removeNestedDelete(VirtualFile file, Set<VirtualFile> deleted) {
     if (!deleted.add(file)) {
       return true;
     }
@@ -932,14 +910,13 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         return true;
       }
     }
-
     return false;
   }
 
-  private static boolean eventConflictsWithPrevious(@NotNull VFileEvent event,
-                                                    @NotNull String path,
-                                                    @NotNull MostlySingularMultiMap<String, VFileEvent> files,
-                                                    @NotNull Set<? super String> middleDirs) {
+  private static boolean eventConflictsWithPrevious(VFileEvent event,
+                                                    String path,
+                                                    MostlySingularMultiMap<String, VFileEvent> files,
+                                                    Set<String> middleDirs) {
     boolean canReconcileEvents = true;
     for (VFileEvent prev : files.get(path)) {
       if (!(isContentChangeLikeHarmlessEvent(event) && isContentChangeLikeHarmlessEvent(prev))) {
@@ -965,41 +942,40 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         // conflicting event found for ancestor, stop
         return true;
       }
-      if (!middleDirs.add(parentDir)) break;  // all parents up already stored, stop
+      if (!middleDirs.add(parentDir)) break;  // all parents are already stored; stop
       li = liPrev;
     }
 
     return false;
   }
 
-  private static boolean isContentChangeLikeHarmlessEvent(@NotNull VFileEvent event) {
+  private static boolean isContentChangeLikeHarmlessEvent(VFileEvent event) {
     if (event instanceof VFileContentChangeEvent) return true;
     if (event instanceof VFilePropertyChangeEvent) {
-      String prop = ((VFilePropertyChangeEvent)event).getPropertyName();
-      return prop.equals(VirtualFile.PROP_WRITABLE)
-             || prop.equals(VirtualFile.PROP_ENCODING)
-             || prop.equals(VirtualFile.PROP_CHILDREN_CASE_SENSITIVITY);
+      String p = ((VFilePropertyChangeEvent)event).getPropertyName();
+      return p.equals(VirtualFile.PROP_WRITABLE) || p.equals(VirtualFile.PROP_ENCODING) || p.equals(VirtualFile.PROP_CHILDREN_CASE_SENSITIVITY);
     }
     return false;
   }
 
-  // finds a group of non-conflicting events, validate them.
-  // "outApplyActions" will contain handlers for applying the grouped events
-  // "outValidatedEvents" will contain events for which VFileEvent.isValid() is true
+  // Finds a group of non-conflicting events and validates them.
+  // The `outApplyActions` will contain handlers for applying grouped events.
+  // The `outValidatedEvents` will contain events for which `VFileEvent#isValid` is true.
+  //
   // return index after the last processed event
-  private int groupAndValidate(@NotNull List<? extends CompoundVFileEvent> events,
+  private int groupAndValidate(List<CompoundVFileEvent> events,
                                int startIndex,
-                               @NotNull List<? super Runnable> outApplyActions,
-                               @NotNull List<? super VFileEvent> outValidatedEvents,
-                               @NotNull MostlySingularMultiMap<String, VFileEvent> filesInvolved,
-                               @NotNull Set<? super String> middleDirsInvolved,
-                               @NotNull Map<VirtualDirectoryImpl, Object> toCreate,
-                               @NotNull Set<VFileEvent> toIgnore,
-                               @NotNull Set<? super VirtualFile> toDelete,
+                               List<Runnable> outApplyActions,
+                               List<VFileEvent> outValidatedEvents,
+                               MostlySingularMultiMap<String, VFileEvent> filesInvolved,
+                               Set<String> middleDirsInvolved,
+                               Map<VirtualDirectoryImpl, Object> toCreate,
+                               Set<VFileEvent> toIgnore,
+                               Set<VirtualFile> toDelete,
                                boolean excludeAsyncListeners) {
     int endIndex = groupByPath(events, startIndex, filesInvolved, middleDirsInvolved, toDelete, toCreate, toIgnore);
     assert endIndex > startIndex : events.get(startIndex) +"; files: "+filesInvolved+"; middleDirs: "+middleDirsInvolved;
-    // since all events in the group events[startIndex..endIndex) are mutually non-conflicting, we can re-arrange creations/deletions together
+    // since all events in the group events[`startIndex`..`endIndex`) are mutually non-conflicting, we can re-arrange creations/deletions together
     groupCreations(outValidatedEvents, outApplyActions, toCreate);
     groupDeletions(events, startIndex, endIndex, outValidatedEvents, outApplyActions, toIgnore);
     groupOthers(events, startIndex, endIndex, outValidatedEvents, outApplyActions);
@@ -1014,18 +990,16 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       }
 
       for (VFileEvent jarDeleteEvent : event.getInducedEvents()) {
-        outApplyActions.add((Runnable)() -> applyEvent(jarDeleteEvent));
+        outApplyActions.add(() -> applyEvent(jarDeleteEvent));
         outValidatedEvents.add(jarDeleteEvent);
       }
     }
     return endIndex;
   }
 
-  // find all VFileCreateEvent events in [start..end)
-  // group them by parent directory, validate in bulk for each directory, and return "applyCreations()" runnable
-  private void groupCreations(@NotNull List<? super VFileEvent> outValidated,
-                              @NotNull List<? super Runnable> outApplyActions,
-                              @NotNull Map<VirtualDirectoryImpl, Object> created) {
+  // Finds all `VFileCreateEvent` instances in [`start`..`end`), groups them by parent directory, validates in bulk for each directory,
+  // and returns `applyCreations()` runnable
+  private void groupCreations(List<VFileEvent> outValidated, List<Runnable> outApplyActions, Map<VirtualDirectoryImpl, Object> created) {
     if (!created.isEmpty()) {
       // since the VCreateEvent.isValid() is extremely expensive, combine all creation events for the directory together
       // and use VirtualDirectoryImpl.validateChildrenToCreate() optimised for bulk validation
@@ -1034,7 +1008,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         VirtualDirectoryImpl directory = entry.getKey();
         Object value = entry.getValue();
         //noinspection unchecked
-        Set<VFileCreateEvent> createEvents = value instanceof VFileCreateEvent ? new HashSet<>(Collections.singletonList((VFileCreateEvent)value)) : (Set<VFileCreateEvent>)value;
+        Set<VFileCreateEvent> createEvents =
+          value instanceof VFileCreateEvent ? new HashSet<>(List.of((VFileCreateEvent)value)) : (Set<VFileCreateEvent>)value;
         directory.validateChildrenToCreate(createEvents);
         hasValidEvents |= !createEvents.isEmpty();
         outValidated.addAll(createEvents);
@@ -1042,9 +1017,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       }
 
       if (hasValidEvents) {
-        //noinspection unchecked
-        Map<VirtualDirectoryImpl, Set<VFileCreateEvent>> finalGrouped = (Map)created;
-        outApplyActions.add((Runnable)() -> {
+        @SuppressWarnings({"unchecked", "rawtypes"}) Map<VirtualDirectoryImpl, Set<VFileCreateEvent>> finalGrouped = (Map)created;
+        outApplyActions.add(() -> {
           applyCreations(finalGrouped);
           incStructuralModificationCount();
         });
@@ -1052,14 +1026,14 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  // find all VFileDeleteEvent events in [start..end)
-  // group them by parent directory (can be null), filter out files which parent dir is to be deleted too, and return "applyDeletions()" runnable
-  private void groupDeletions(@NotNull List<? extends CompoundVFileEvent> events,
+  // Finds all `VFileDeleteEvent` instances in [`start`..`end`), groups them by parent directory (can be null),
+  // filters out files which parent dir is to be deleted too, and returns `applyDeletions()` runnable.
+  private void groupDeletions(List<CompoundVFileEvent> events,
                               int start,
                               int end,
-                              @NotNull List<? super VFileEvent> outValidated,
-                              @NotNull List<? super Runnable> outApplyActions,
-                              @NotNull Set<? extends VFileEvent> toIgnore) {
+                              List<VFileEvent> outValidated,
+                              List<Runnable> outApplyActions,
+                              Set<VFileEvent> toIgnore) {
     MultiMap<VirtualDirectoryImpl, VFileDeleteEvent> grouped = null;
     boolean hasValidEvents = false;
     for (int i = start; i < end; i++) {
@@ -1077,7 +1051,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
     if (hasValidEvents) {
       MultiMap<VirtualDirectoryImpl, VFileDeleteEvent> finalGrouped = grouped;
-      outApplyActions.add((Runnable)() -> {
+      outApplyActions.add(() -> {
         clearIdCache();
         applyDeletions(finalGrouped);
         incStructuralModificationCount();
@@ -1085,29 +1059,26 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  // find events other than VFileCreateEvent or VFileDeleteEvent in [start..end)
-  // validate and return "applyEvent()" runnable for each event because it's assumed there won't be too many of them
-  private void groupOthers(@NotNull List<? extends CompoundVFileEvent> events,
-                           int start,
-                           int end,
-                           @NotNull List<? super VFileEvent> outValidated,
-                           @NotNull List<? super Runnable> outApplyActions) {
+  // Finds events other than `VFileCreateEvent` or `VFileDeleteEvent` in [`start`..`end`), validates,
+  // and returns `applyEvent()` runnable for each event because it's assumed there won't be too many of them.
+  private void groupOthers(List<CompoundVFileEvent> events, int start, int end, List<VFileEvent> outValidated, List<Runnable> outApplyActions) {
     for (int i = start; i < end; i++) {
       VFileEvent event = events.get(i).getFileEvent();
       if (event instanceof VFileCreateEvent || event instanceof VFileDeleteEvent || !event.isValid()) continue;
       outValidated.add(event);
-      outApplyActions.add((Runnable)() -> applyEvent(event));
+      outApplyActions.add(() -> applyEvent(event));
     }
   }
 
   private static final int INNER_ARRAYS_THRESHOLD = 1024; // max initial size, to avoid OOM on million-events processing
+
   @Override
   public void processEvents(@NotNull List<? extends @NotNull VFileEvent> events) {
     processEventsImpl(ContainerUtil.map(events, e -> new CompoundVFileEvent(e)), false);
   }
 
   @ApiStatus.Internal
-  public void processEventsImpl(@NotNull List<? extends CompoundVFileEvent> events, boolean excludeAsyncListeners) {
+  public void processEventsImpl(@NotNull List<CompoundVFileEvent> events, boolean excludeAsyncListeners) {
     ApplicationManager.getApplication().assertWriteAccessAllowed();
 
     int startIndex = 0;
@@ -1133,16 +1104,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       toCreate.clear();
       toIgnore.clear();
       toDelete.clear();
-      startIndex = groupAndValidate(events,
-                                    startIndex,
-                                    applyActions,
-                                    validated,
-                                    files,
-                                    middleDirs,
-                                    toCreate,
-                                    toIgnore,
-                                    toDelete,
-                                    excludeAsyncListeners);
+      startIndex = groupAndValidate(events, startIndex, applyActions, validated, files, middleDirs, toCreate, toIgnore, toDelete, excludeAsyncListeners);
 
       if (!validated.isEmpty()) {
         applyMultipleEvents(publisher, applyActions, validated, excludeAsyncListeners);
@@ -1150,9 +1112,10 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  private static void applyMultipleEvents(@NotNull BulkFileListener publisher,
-                                          @NotNull List<? extends Runnable> applyActions,
-                                          @NotNull List<? extends VFileEvent> applyEvents, boolean excludeAsyncListeners) {
+  private static void applyMultipleEvents(BulkFileListener publisher,
+                                          List<Runnable> applyActions,
+                                          List<VFileEvent> applyEvents,
+                                          boolean excludeAsyncListeners) {
     PingProgress.interactWithEdtProgress();
     // do defensive copy to cope with ill-written listeners that save passed list for later processing
     List<VFileEvent> toSend = ContainerUtil.immutableList(applyEvents.toArray(new VFileEvent[0]));
@@ -1194,19 +1157,19 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  private static void fireBeforeEvents(@NotNull BulkFileListener publisher, @NotNull List<? extends VFileEvent> toSend) {
+  private static void fireBeforeEvents(BulkFileListener publisher, List<VFileEvent> toSend) {
     publisher.before(toSend);
     ((BulkFileListener)VirtualFilePointerManager.getInstance()).before(toSend);
   }
 
-  private static void fireAfterEvents(@NotNull BulkFileListener publisher, @NotNull List<? extends VFileEvent> toSend) {
+  private static void fireAfterEvents(BulkFileListener publisher, List<VFileEvent> toSend) {
     CachedFileType.clearCache();
     ((BulkFileListener)VirtualFilePointerManager.getInstance()).after(toSend);
     publisher.after(toSend);
   }
 
   // remove children from specified directories using VirtualDirectoryImpl.removeChildren() optimised for bulk removals
-  private void applyDeletions(@NotNull MultiMap<VirtualDirectoryImpl, VFileDeleteEvent> deletions) {
+  private void applyDeletions(MultiMap<VirtualDirectoryImpl, VFileDeleteEvent> deletions) {
     for (Map.Entry<VirtualDirectoryImpl, Collection<VFileDeleteEvent>> entry : deletions.entrySet()) {
       VirtualDirectoryImpl parent = entry.getKey();
       Collection<VFileDeleteEvent> deleteEvents = entry.getValue();
@@ -1236,7 +1199,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   // add children to specified directories using VirtualDirectoryImpl.createAndAddChildren() optimised for bulk additions
-  private void applyCreations(@NotNull Map<VirtualDirectoryImpl, Set<VFileCreateEvent>> creations) {
+  private void applyCreations(Map<VirtualDirectoryImpl, Set<VFileCreateEvent>> creations) {
     for (Map.Entry<VirtualDirectoryImpl, Set<VFileCreateEvent>> entry : creations.entrySet()) {
       VirtualDirectoryImpl parent = entry.getKey();
       Collection<VFileCreateEvent> createEvents = entry.getValue();
@@ -1244,18 +1207,19 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  private void applyCreateEventsInDirectory(@NotNull VirtualDirectoryImpl parent, @NotNull Collection<? extends VFileCreateEvent> createEvents) {
+  private void applyCreateEventsInDirectory(VirtualDirectoryImpl parent, Collection<VFileCreateEvent> createEvents) {
     int parentId = getFileId(parent);
     NewVirtualFile vf = findFileById(parentId);
     if (!(vf instanceof VirtualDirectoryImpl)) return;
-    parent = (VirtualDirectoryImpl)vf;  // retain in myIdToDirCache at least for the duration of this block in order to subsequent findFileById() won't crash
+    parent = (VirtualDirectoryImpl)vf;  // retain in `myIdToDirCache` at least for the duration of this block, so that subsequent `findFileById` won't crash
     NewVirtualFileSystem delegate = replaceWithNativeFS(getDelegate(parent));
 
     List<ChildInfo> childrenAdded = new ArrayList<>(createEvents.size());
     for (VFileCreateEvent createEvent : createEvents) {
       createEvent.resetCache();
       String name = createEvent.getChildName();
-      Pair<@NotNull FileAttributes, String> childData = getChildData(delegate, createEvent.getParent(), name, createEvent.getAttributes(), createEvent.getSymlinkTarget());
+      Pair<@NotNull FileAttributes, String> childData = getChildData(
+        delegate, createEvent.getParent(), name, createEvent.getAttributes(), createEvent.getSymlinkTarget());
       if (childData != null) {
         ChildInfo child = makeChildRecord(parent, parentId, name, childData, delegate, createEvent.getChildren());
         childrenAdded.add(child);
@@ -1269,9 +1233,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     saveScannedChildrenRecursively(createEvents, delegate, parent.isCaseSensitive());
   }
 
-  private static void saveScannedChildrenRecursively(@NotNull Collection<? extends VFileCreateEvent> createEvents,
-                                                     @NotNull NewVirtualFileSystem delegate,
-                                                     boolean isCaseSensitive) {
+  private static void saveScannedChildrenRecursively(Collection<VFileCreateEvent> createEvents, NewVirtualFileSystem delegate, boolean isCaseSensitive) {
     for (VFileCreateEvent createEvent : createEvents) {
       ChildInfo[] children = createEvent.getChildren();
       if (children == null || !createEvent.isDirectory()) continue;
@@ -1288,7 +1250,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
           List<ChildInfo> added = new ArrayList<>(scannedChildren.size());
           for (ChildInfo childInfo : scannedChildren) {
             CharSequence childName = childInfo.getName();
-            Pair<@NotNull FileAttributes, String> childData = getChildData(delegate, directory, childName.toString(), childInfo.getFileAttributes(), childInfo.getSymlinkTarget());
+            Pair<@NotNull FileAttributes, String> childData = getChildData(
+              delegate, directory, childName.toString(), childInfo.getFileAttributes(), childInfo.getSymlinkTarget());
             if (childData != null) {
               ChildInfo newChild = makeChildRecord(directory, directoryId, childName, childData, delegate, childInfo.getChildren());
               added.add(newChild);
@@ -1342,7 +1305,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
     // assume roots have the FS default case sensitivity
     attributes = attributes.withCaseSensitivity(fs.isCaseSensitive() ? FileAttributes.CaseSensitivity.SENSITIVE : FileAttributes.CaseSensitivity.INSENSITIVE);
-    // avoid creating zillion of roots which are not actual roots
+    // avoid creating gazillions of roots which are not actual roots
     String parentPath = fs instanceof LocalFileSystem ? PathUtil.getParentPath(rootPath) : "";
     if (!parentPath.isEmpty()) {
       FileAttributes parentAttributes = loadAttributes(fs, parentPath);
@@ -1392,15 +1355,11 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return newRoot;
   }
 
-  private static @Nullable FileAttributes loadAttributes(@NotNull NewVirtualFileSystem fs, @NotNull String path) {
-    StubVirtualFile file = new StubVirtualFile(fs) {
-      @Override
-      public @NotNull String getPath() { return path; }
-
-      @Override
-      public @Nullable VirtualFile getParent() { return null; }
-    };
-    return fs.getAttributes(file);
+  private static @Nullable FileAttributes loadAttributes(NewVirtualFileSystem fs, String path) {
+    return fs.getAttributes(new StubVirtualFile(fs) {
+      @Override public @NotNull String getPath() { return path; }
+      @Override public @Nullable VirtualFile getParent() { return null; }
+    });
   }
 
   @Override
@@ -1451,7 +1410,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return VfsUtilCore.toVirtualFileArray(roots);
   }
 
-  private void applyEvent(@NotNull VFileEvent event) {
+  private void applyEvent(VFileEvent event) {
     if (LOG.isDebugEnabled()) {
       LOG.debug("Applying " + event);
     }
@@ -1519,6 +1478,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
+  @ApiStatus.Internal
   public static void executeChangeCaseSensitivity(@NotNull VirtualFile file, @NotNull FileAttributes.CaseSensitivity newCaseSensitivity) {
     VirtualDirectoryImpl directory = (VirtualDirectoryImpl)file;
     setFlag(directory, Flags.CHILDREN_CASE_SENSITIVE, newCaseSensitivity == FileAttributes.CaseSensitivity.SENSITIVE);
@@ -1531,8 +1491,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return "PersistentFS";
   }
 
-  private void executeCreateChild(@NotNull VirtualFile parent,
-                                  @NotNull String name,
+  private void executeCreateChild(VirtualFile parent,
+                                  String name,
                                   @Nullable FileAttributes attributes,
                                   @Nullable String symlinkTarget,
                                   boolean isEmptyDirectory) {
@@ -1555,21 +1515,21 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     VirtualDirectoryImpl dir = (VirtualDirectoryImpl)parent;
     VirtualFileSystemEntry child = dir.createChild(name, childId, dir.getFileSystem(), fileAttributesToFlags(childData.first), isEmptyDirectory);
     if (isEmptyDirectory) {
-      // when creating empty directory we need to make sure every file created inside will fire "file created" event
-      // in order to virtual file pointer manager get those events to update its pointers properly
-      // (because currently VirtualFilePointerManager ignores empty directory creation events for performance reasons)
+      // When creating an empty directory, we need to make sure every file created inside will fire a "file created" event,
+      // in order to `VirtualFilePointerManager` get those events to update its pointers properly
+      // (because currently it ignores empty directory creation events for performance reasons).
       setChildrenCached(childId);
     }
     dir.addChild(child);
     incStructuralModificationCount();
   }
 
-  private static @NotNull ChildInfo makeChildRecord(@NotNull VirtualFile parentFile,
-                                                    int parentId,
-                                                    @NotNull CharSequence name,
-                                                    @NotNull Pair<@NotNull FileAttributes, String> childData,
-                                                    @NotNull NewVirtualFileSystem fs,
-                                                    ChildInfo @Nullable [] children) {
+  private static ChildInfo makeChildRecord(VirtualFile parentFile,
+                                           int parentId,
+                                           CharSequence name,
+                                           Pair<@NotNull FileAttributes, String> childData,
+                                           NewVirtualFileSystem fs,
+                                           ChildInfo @Nullable [] children) {
     int childId = FSRecords.createRecord();
     FileAttributes attributes = childData.first;
     int nameId = writeAttributesToRecord(childId, parentFile, parentId, name, fs, attributes);
@@ -1579,11 +1539,11 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
   // return File attributes, symlink target
   // null when file not found
-  private static @Nullable Pair<@NotNull FileAttributes, String> getChildData(@NotNull NewVirtualFileSystem fs,
-                                                                    @NotNull VirtualFile parent,
-                                                                    @NotNull String name,
-                                                                    @Nullable FileAttributes attributes,
-                                                                    @Nullable String symlinkTarget) {
+  private static @Nullable Pair<@NotNull FileAttributes, String> getChildData(NewVirtualFileSystem fs,
+                                                                              VirtualFile parent,
+                                                                              String name,
+                                                                              @Nullable FileAttributes attributes,
+                                                                              @Nullable String symlinkTarget) {
     if (attributes == null) {
       FakeVirtualFile virtualFile = new FakeVirtualFile(parent, name);
       attributes = fs.getAttributes(virtualFile);
@@ -1592,7 +1552,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return attributes == null ? null : new Pair<>(attributes, symlinkTarget);
   }
 
-  private void executeDelete(@NotNull VFileDeleteEvent event) {
+  private void executeDelete(VFileDeleteEvent event) {
     VirtualFile file = event.getFile();
     if (!file.exists()) {
       LOG.error("Deleting a file which does not exist: " +((VirtualFileWithId)file).getId()+ " "+file.getPath());
@@ -1626,7 +1586,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     incStructuralModificationCount();
   }
 
-  private static void invalidateSubtree(@NotNull VirtualFile file, @NotNull Object source, @NotNull Object reason) {
+  private static void invalidateSubtree(VirtualFile file, Object source, Object reason) {
     VirtualFileSystemEntry impl = (VirtualFileSystemEntry)file;
     if (file.is(VFileProperty.SYMLINK)) {
       VirtualFileSystem fs = file.getFileSystem();
@@ -1640,28 +1600,28 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  private static void removeIdFromChildren(@NotNull VirtualFile parent, int parentId, int childId) {
+  private static void removeIdFromChildren(VirtualFile parent, int parentId, int childId) {
     ChildInfo toRemove = new ChildInfoImpl(childId, ChildInfoImpl.UNKNOWN_ID_YET, null, null, null);
     FSRecords.update(parent, parentId, list -> list.remove(toRemove));
   }
 
-  private static void executeRename(@NotNull VirtualFile file, @NotNull String newName) {
+  private static void executeRename(VirtualFile file, String newName) {
     int id = getFileId(file);
     FSRecords.setName(id, newName);
     ((VirtualFileSystemEntry)file).setNewName(newName);
   }
 
-  private static void executeSetWritable(@NotNull VirtualFile file, boolean writableFlag) {
+  private static void executeSetWritable(VirtualFile file, boolean writableFlag) {
     setFlag(file, Flags.IS_READ_ONLY, !writableFlag);
     ((VirtualFileSystemEntry)file).setWritableFlag(writableFlag);
   }
 
-  private static void executeSetHidden(@NotNull VirtualFile file, boolean hiddenFlag) {
+  private static void executeSetHidden(VirtualFile file, boolean hiddenFlag) {
     setFlag(file, Flags.IS_HIDDEN, hiddenFlag);
     ((VirtualFileSystemEntry)file).setHiddenFlag(hiddenFlag);
   }
 
-  private static void executeSetTarget(@NotNull VirtualFile file, @Nullable String target) {
+  private static void executeSetTarget(VirtualFile file, @Nullable String target) {
     int id = getFileId(file);
     FSRecords.storeSymlinkTarget(id, target);
     VirtualFileSystem fs = file.getFileSystem();
@@ -1670,7 +1630,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  private static void setFlag(@NotNull VirtualFile file, @PersistentFS.Attributes int mask, boolean value) {
+  private static void setFlag(VirtualFile file, @PersistentFS.Attributes int mask, boolean value) {
     setFlag(getFileId(file), mask, value);
   }
 
@@ -1683,7 +1643,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  private static void executeTouch(@NotNull VirtualFile file,
+  private static void executeTouch(VirtualFile file,
                                    boolean reloadContentFromDelegate,
                                    long newModificationStamp,
                                    long newLength,
@@ -1699,7 +1659,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     ((VirtualFileSystemEntry)file).setModificationStamp(newModificationStamp);
   }
 
-  private void executeMove(@NotNull VirtualFile file, @NotNull VirtualFile newParent) {
+  private void executeMove(VirtualFile file, VirtualFile newParent) {
     clearIdCache();
 
     int fileId = getFileId(file);
